tests/test_files/neg/bad_sealing_int.s
    seal r1 r0 r1 ; FAIL: attempt to seal an integer, but it is not sealable
    halt
